feat: implement custom code analyzer for Lucene, improve UI link navigation, and refactor codebase for cleaner imports and optimized resource handling.